--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "build": "tsc --build",
     "commit": "cz"
   },
+  "engines": {
+    "node": ">=16.6.0"
+  },
   "dependencies": {
     "@discordjs/voice": "^0.11.0",
     "array-move": "^3.0.1",
